<resources>
    <string name="app_name">sapiKu</string>

    <string name="title_home">Daftar Sapi</string>
    <string name="title_nearest">Sapi Terdekat</string>
    <string name="title_filter">Filter</string>
    <string name="title_history">Riwayat</string>
    <string name="title_profile">Profil</string>
    <string name="title_colaboration">Kolaborasi</string>

    <string name="hello_home_fragment">Fragment HOME</string>
    <string name="hello_nearest_fragment">Fragment NEAREST</string>
    <string name="hello_filter_fragment">Fragment FILTER</string>
    <string name="hello_history_fragment">Fragment HISTORY</string>
    <string name="hello_profile_fragment">Fragment PROFILE</string>

    <string-array name="title">
        <item>Daftar Sapi</item>
        <item>Sapi Terdekat</item>
        <item>Filter</item>
        <item>Riwayat</item>
        <item>Kolaborasi</item>
    </string-array>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_pw">Lupa kata sandi?</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="question_colab">Apakah Anda ingin berkolaborasi kurban?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="email">E-mail</string>
    <string name="phone_num">Nomor Telepon</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="progress">Loading</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name_account">Sign In</string>

    <string name="sapi_jantan">Jantan</string>
    <string name="sapi_betina">Betina</string>
    <string name="filter_jarak_ternak">Jarak Ternak Sapi</string>
    <string name="filter_usia">Usia Ternak Sapi</string>
    <string name="filter_jumlah_kolab">Jumlah Kolaborasi</string>
    <string name="filter_harga">Harga</string>
    <string name="filter_atur_lokasi">Atur Lokasi Anda Saat ini</string>
    <string name="title_activity_maps">Map</string>
</resources>
