<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_main2"
    tools:context=".SignUpActivity"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo"/>

    <android.support.v7.widget.CardView
        android:id="@+id/form_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="#f5f5f5">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/full_name"
                android:inputType="text"/>

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/phone_num"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:enabled="false"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/form_signup"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:backgroundTint="#d7c369"
        android:text="@string/sign_up"
        android:textSize="17sp"
        android:enabled="false"/>

    <RelativeLayout
        android:id="@+id/relative_layout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@android:color/black"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/progress_bar"
            android:layout_centerInParent="true"
            android:text="@string/progress"/>
    </RelativeLayout>
</RelativeLayout>