<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingTop="10dp"
    tools:context=".Fragment.FilterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jenis"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"/>
    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <RadioButton
            android:id="@+id/radioJantan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sapi_jantan"/>
        <RadioButton
            android:id="@+id/radioBetina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sapi_betina"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/filter_jarakText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_jarak_ternak"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/filter_jarak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="50 Km"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/filter_usiaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_usia"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/filter_usia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="2-5 tahun"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5"
        android:progress="2"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/filter_kolabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_jumlah_kolab"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/filter_kolab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="0-5 Orang"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5"
        android:progress="3"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/filter_hargaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_harga"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/filter_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="0-10.000.000"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10000000"
        android:progress="2500000"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/filter_atur_lokasiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_atur_lokasi"
            android:textColor="@color/black"
            android:layout_centerVertical="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>